test/fail/file-import.mo
import (f : Nat) = "file:CI.md";

